feat(app): pending testing of modified components

--- a/env.example
+++ b/env.example
@@ -15,3 +15,15 @@ NEXT_PUBLIC_MAX_FILES=3
 # Session Configuration (Required for secure API key storage)
 # Generate a random 32+ character string for production
 SESSION_SECRET=complex_password_at_least_32_characters_long_for_security
+
+# Rate Limiting (Optional: Upstash Redis for production)
+# Sign up at https://upstash.com/ for free Redis
+# If not set, will use in-memory rate limiting (not recommended for production)
+# UPSTASH_REDIS_REST_URL=https://your-database.upstash.io
+# UPSTASH_REDIS_REST_TOKEN=your_token_here
+
+# Monitoring (Optional: Sentry for error tracking)
+# Sign up at https://sentry.io/ for free error tracking
+# If not set, errors will only be logged to console
+# NEXT_PUBLIC_SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+# SENTRY_AUTH_TOKEN=your_auth_token_here (only needed for source maps upload)
