--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@sentry/nextjs": "^10.22.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.12.2",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.1.0",
     "iron-session": "^8.0.4",
     "isomorphic-dompurify": "^2.30.0",
+    "jspdf": "^3.0.3",
     "katex": "^0.16.25",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
