--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "jspdf": "^3.0.3",
     "katex": "^0.16.25",
     "lucide-react": "^0.548.0",
+    "mermaid": "^11.12.1",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "react-mermaid": "^0.1.3",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
