--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sentry/nextjs": "^10.22.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "@viz-js/viz": "^3.21.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
