--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
     "@viz-js/viz": "^3.21.0",
+    "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compromise": "^14.14.5",
+    "compromise-dates": "^3.7.1",
     "fuse.js": "^7.1.0",
     "iron-session": "^8.0.4",
     "isomorphic-dompurify": "^2.30.0",
