--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jspdf": "^3.0.3",
     "katex": "^0.16.25",
     "lucide-react": "^0.548.0",
+    "lz-string": "^1.5.0",
     "mermaid": "^11.12.1",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
