feat(app): added ideas

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@
 # LAWNET_API_KEY=your_key_here
 # COURTLISTENER_API_KEY=your_key_here
 
+# Optional: For web search (https://serper.dev)
+# SERPER_API_KEY=your_serper_api_key_here
+
 # App Configuration
 NEXT_PUBLIC_APP_NAME=Junas
 NEXT_PUBLIC_MAX_FILE_SIZE=10485760
