--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "compromise": "^14.14.5",
     "compromise-dates": "^3.7.1",
+    "edge-csrf": "^1.0.11",
     "fuse.js": "^7.1.0",
     "iron-session": "^8.0.4",
     "isomorphic-dompurify": "^2.30.0",
@@ -43,6 +44,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "react-virtuoso": "^4.18.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
