feat(app): aded

--- a/junas.config.toml
+++ b/junas.config.toml
@@ -32,7 +32,7 @@ agentMode = false
 
 # --- Interface Settings ---
 # UI Theme opacity and color scheme
-# Options: 'vanilla', 'gruvbox', 'everforest', 'tokyo-night', 'catppuccin', 'solarized', 'rose-pine', 'kanagawa'
+# Options: 'vanilla', 'gruvbox', 'everforest', 'tokyo-night', 'catppuccin', 'solarized', 'rose-pine', 'kanagawa', 'nord', 'cyberpunk'
 theme = "vanilla"
 
 # Toggle Dark Mode
