feat(app): updatde build lockfile issues

--- a/package.json
+++ b/package.json
@@ -71,5 +71,10 @@
     "*.{js,jsx,ts,tsx,json,css,md}": [
       "prettier --write"
     ]
+  },
+  "overrides": {
+    "edge-csrf": {
+      "next": "$next"
+    }
   }
 }
