--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compromise-dates": "^3.7.1",
     "edge-csrf": "^1.0.11",
     "fuse.js": "^7.1.0",
+    "import-in-the-middle": "^2.0.5",
     "iron-session": "^8.0.4",
     "isomorphic-dompurify": "^2.30.0",
     "jspdf": "^3.0.3",
@@ -48,6 +49,7 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "require-in-the-middle": "^8.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12",
