--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tauri build",
     "vite:dev": "vite",
     "vite:build": "vite build",
+    "test:unit": "vitest run",
     "lint": "eslint",
     "prepare": "husky",
     "tauri": "tauri"
@@ -62,7 +63,8 @@
     "prettier": "^3.8.1",
     "tailwindcss": "^3.4.18",
     "typescript": "^5",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": [
