--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ thiserror = "1"
 futures-util = "0.3"
 ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
 sha2 = "0.10"
+kuchiki = "0.8"
