--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "vite:dev": "vite",
     "vite:build": "vite build",
     "test:unit": "vitest run",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint",
     "prepare": "husky",
     "tauri": "tauri"
