--- a/package.json
+++ b/package.json
@@ -55,10 +55,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
     "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.21",
     "baseline-browser-mapping": "^2.9.7",
     "eslint": "^9",
+    "eslint-config-next": "^16.1.6",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
